--- a/[M1S02] Exercicios/index.html
+++ b/[M1S02] Exercicios/index.html
@@ -10,6 +10,7 @@
       href="imgs/favicon-32x32.png"
       type="image/x-icon"
     />
+    <script src="./src/script.js"></script>
   </head>
   <body>
     <header class="display-flex">
@@ -54,18 +55,18 @@
         <div class="root flex-colum">
           <div id="contato">
             <label for="">Nome</label>
-            <input type="text" placeholder="Nome" />
+            <input id="nome" type="text" placeholder="Nome" />
           </div>
           <div>
             <label for="">Telefone</label>
-            <input type="text" placeholder="Telefone" />
+            <input id="telefone" type="text" placeholder="Telefone" />
           </div>
           <div>
             <label for="">Email</label>
-            <input type="text" placeholder="E-mail" />
+            <input id="email" type="text" placeholder="E-mail" />
           </div>
           <div class="display-flex flex-center">
-            <button type="submit">Enviar</button>
+            <button onclick="showData()" type="submit">Enviar</button>
           </div>
         </div>
       </section>
